--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -22,6 +22,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Set short SHA
+        run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -30,4 +33,4 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/backend-app:latest
-            ${{ secrets.DOCKER_USERNAME }}/backend-app:${GITHUB_SHA::7}
+            ${{ secrets.DOCKER_USERNAME }}/backend-app:${env.SHORT_SHA}
