--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -33,4 +33,4 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/frontend-app:latest
-            ${{ secrets.DOCKER_USERNAME }}/frontend-app:${env.SHORT_SHA}
+            ${{ secrets.DOCKER_USERNAME }}/frontend-app:${{ env.SHORT_SHA }}
