--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -13,6 +13,15 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Build JAR with Maven
+        run: mvn clean package -DskipTests
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
