--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
+  namespace: app
 spec:
   replicas: 1
   selector:
@@ -18,7 +19,7 @@ spec:
           imagePullPolicy: Always
           env:
             - name: SPRING_POSTGRES_URL
-              value: "jdbc:postgresql://postgres-service:5432/postgres"
+              value: "jdbc:postgresql://postgres:5432/postgres"
             - name: SPRING_POSTGRES_USERNAME
               value: "myapplication"
             - name: SPRING_POSTGRES_PASSWORD
@@ -32,6 +33,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  namespace: app
 spec:
   selector:
     app: backend
