--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,12 +2,15 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: mca-devops-test-solution-ingress
+  namespace: app
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
 spec:
+  ingressClassName: alb
   rules:
-    - host: mca-devops-test-solution.local
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
@@ -15,7 +18,7 @@ spec:
               service:
                 name: frontend-service
                 port:
-                  number: 80
+                  number: 4200
           - path: /api
             pathType: Prefix
             backend:
