--- a/k8s/postgres-statefulset.yaml
+++ b/k8s/postgres-statefulset.yaml
@@ -1,33 +1,23 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
----
-apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-service
+  name: postgres
+  namespace: app
 spec:
-  clusterIP: None  # Headless service for StatefulSet
+  clusterIP: None   # Headless service required for StatefulSet
   selector:
     app: postgres
   ports:
-    - protocol: TCP
-      port: 5432
+    - port: 5432
       targetPort: 5432
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres
+  namespace: app
 spec:
-  serviceName: "postgres-service"
+  serviceName: postgres
   replicas: 1
   selector:
     matchLabels:
@@ -40,24 +30,27 @@ spec:
       containers:
         - name: postgres
           image: postgres:15
-          env:
-            - name: POSTGRES_DB
-              value: "mydatabase"
-            - name: POSTGRES_USER
-              value: "myapplication"
-            - name: POSTGRES_PASSWORD
-              value: "M3P@ssw0rd!"
           ports:
             - containerPort: 5432
+          env:
+            - name: POSTGRES_DB
+              value: mydatabase
+            - name: POSTGRES_USER
+              value: myapplication
+            - name: POSTGRES_PASSWORD
+              value: M3P@ssw0rd!
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
           volumeMounts:
-            - name: postgres-storage
-              mountPath: /var/lib/postgresql
+            - name: postgres-data
+              mountPath: /var/lib/postgresql/data
   volumeClaimTemplates:
     - metadata:
-        name: postgres-storage
+        name: postgres-data
       spec:
         accessModes:
           - ReadWriteOnce
+        storageClassName: gp2
         resources:
           requests:
             storage: 1Gi
