--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,3 +1,4 @@
+---
 version: 0.2
 
 env:
@@ -8,32 +9,31 @@ env:
 phases:
   install:
     runtime-versions:
-      docker: 20  
+      docker: 20
     commands:
       - docker --version
+
   pre_build:
     commands:
       - echo "Logging in to Docker Hub"
-      - echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-
-      # Generate immutable build ID
-      - BUILD_ID=$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}' | cut -c1-8)
+      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      - |
+        BUILD_ID=$(echo "$CODEBUILD_BUILD_ID" \
+          | awk -F":" '{print $2}' \
+          | cut -c1-8)
       - echo "Build ID: $BUILD_ID"
 
   build:
     commands:
       - echo "Building backend image"
-      - docker build -t $BACKEND_IMAGE:$BUILD_ID backend/
-
+      - docker build -t "$BACKEND_IMAGE:$BUILD_ID" backend/
       - echo "Building frontend image"
-      - docker build -t $FRONTEND_IMAGE:$BUILD_ID frontend/
+      - docker build -t "$FRONTEND_IMAGE:$BUILD_ID" frontend/
 
   post_build:
     commands:
       - echo "Pushing backend image"
-      - docker push $BACKEND_IMAGE:$BUILD_ID
-
+      - docker push "$BACKEND_IMAGE:$BUILD_ID"
       - echo "Pushing frontend image"
-      - docker push $FRONTEND_IMAGE:$BUILD_ID
-
+      - docker push "$FRONTEND_IMAGE:$BUILD_ID"
       - echo "Build completed successfully"
